	exceptions and 'ok' by bool().

	* src/server/exmpp_server_legacy_auth.erl: Add a function to tell if
	the peer wants to know the authentication fields.

	* src/core/exmpp_jid.erl: For JIDs, accept the empty string in
	argument but still use undefined in the #jid construction.

	* src/core/exmpp_presence.erl: Add a function probe/0.

2008-06-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_jid.erl: Add functions to convert to and from
	ejabberd normal and short JID forms.

	* src/core/exmpp_iq.erl: Add functions to convert to the ejabberd #iq
	record.

2008-06-20  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp.hrl, c_src/xmpp_ns.h.in, c_src/xmpp_names.h.in: Add
	vCard namespace. I'm not really good at reading DTD so xmpp_*.h.in
	lists may not be correct. For example, Psi uses attributes 'version'
	and 'prodid' but as I understand the DTD, those should be elements.
	For the record, I used the DTD included in XEP-0054. The bottom line
	is: all this needs a review!

	* src/server/exmpp_server_compression.erl: Add a function
	'selected_method' to get the method chosen by the peer.

	* src/server/exmpp_server_sasl.erl: The 'success' function was
	missing.

	* src/server/exmpp_server_session.erl (want_setablishment): Fix
	documentation: this function always returns 'ok' or throws an
	exception.

	* src/server/exmpp_server_legacy_auth.erl: When building the fields
	list, include the username value if the peer provided one.

	* src/core/exmpp_iq.erl: Add functions 'is_request', 'is_response',
	'is_result' and 'is_error'. Add function 'get_payload' which returns
	the request, the response or the error, depending on the IQ type.

	* src/core/exmpp_stream.erl: Typo. The documentation at the top of the
	module is out-dated.

	* src/core/exmpp_internals.erl (random_id): Add clauses to generate an
	ID without a prefix.

	* src/core/exmpp_xml.erl: Fix a bug with list concatenation. Style.
