@@ -39,6 +39,8 @@
 
 	* src/core/exmpp_presence.erl: Add a function probe/0.
 
+	* src/client/exmpp_client_legacy_auth.erl: Export hex/1.
+
 2008-06-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/core/exmpp_jid.erl: Add functions to convert to and from
